# cargo-semver-tool

./: .editorconfig  .licensure.yml  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: prerelease.yml  release.yml
src/: cli.rs  main.rs
test/: cli_test.rs
